--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,101 @@
 html {
   box-sizing: border-box;
+  font-family: 'PT Sans Narrow', sans-serif;
   line-height: 1.5;
-  font-family: Georgia, serif;
-  background-color: #bebebe;
+  background-color: #f2f2f2;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 header {
-  background-color: #bd027d;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  background-color: #bd027d;
+  padding-top: 1rem;
+  padding-left: .75em;
+}
+
+header ul {
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+  padding: .6rem 1.125rem;
+  margin: 0 auto;
+  font-size: 1.125rem;
+  order: -1;
+}
+
+nav a,
+nav a:visited {
+  color: #fff;
+  padding: .6rem 1.125rem;
+  text-decoration: none;
+  border: 2px solid #960062;
+  font-family: 'PT Sans Narrow' sans-serif;
+  border-radius: 6px;
+}
+
+nav a:hover,
+nav a:focus {
+  background-color: #fff;
+  color: #bd027d;
+  padding: .6rem 1.125rem;
+  text-decoration: none;
+}
+
+body {
+  margin: 0;
 }
 
 h1 {
-
+  margin: 0;
 }
 
-ul {
+header img {
+  margin: 0 auto;
+  width: 100%;
+}
+
+h2
+
+ul{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  margin: 0;
-  padding: 0;
 }
 
-ul li {
+main ul > li {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-color: #ccc;
   border: 2px solid #afafaf;
-  border-radius: 8px;
-  padding: 1rem;
+}
+
+div {
+  font-size: 1.125rem;
+  background-color: #bebebe;
+  border: 2px solid #afafaf;
+  padding: .5em;
+  height: 10px;
+  width: auto;
+}
+
+div img {
+  width: 2rem;
+
+}
+
+section > ul {
+display: grid;
+grid-template-columns: 1fr 1fr
+}
+
+h3 {
+  align-self: flex-end;
+}
+
+section {
+  margin: 1.5rem;
 }
